--- a/res/languages/en.yaml
+++ b/res/languages/en.yaml
@@ -65,3 +65,4 @@
 "source": "Source"
 "multi_thread_limit": "Multi-Thread Limit"
 no_plugin: The plugin is not installed
+remove_favorite: "Would you like to remove {0}?"
